--- a/package.json
+++ b/package.json
@@ -13,14 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "express-rate-limit": "^6.5.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.6.0",
-    "nodemailer": "^6.7.8",
-    "nodemon": "^2.0.19",
-    "stripe": "^10.3.0"
+    "mongodb": "^4.9.1",
+    "nodemon": "^2.0.19"
   }
 }
